# hardware-db

./: .env  .gitignore  CHANGELOG  DevNotes  README.md  TODO  WildlabsInventory_schema.json  collectReponses.py  collectResponses.py  consolidateResponses.py  createForm.py  debugScript.py  extractingQuestions_temp.py  formMultisectionTest.json  formTest.json  formTrigger.py  formTrigger_v2_polling.py  generateRefreshToken.py  get_edit_response_url.py  hardware-db-minimal.yml  hardware-db.yaml  hardware-db_schema.json  hardware-db_schema_OLD_fFullForm.json  pyproject.toml  reprocessData.py  serviceAccountAuth_test.py  slugifyIDs_temp.py
.github/workflows/: collectResponses.yml  createForm.yml  form-polling.yml  test-form-trigger.yml  testConfig.yml  test_cfg.yml  tests.yml
data/: AMI_system.json  CamcorderAgelica.json  GoPro.json  HDD_camcorder.json  InsectDetect.json  Lépinoc.json  MiniMon.json  PICT.json  VHS_DVR.json  WiFi_SurvCam.json  form_responses.csv  iPod.json
schemas/: hardware-db_schema_v0.2.0.json  hardware-db_schema_v1.0.0.json
schemas/migrations/: SCHEMA_VERSIONING.md  migration_schema.json  migrations.json
src/: __init__.py  authFlow_helpers.py  configParsing.py  dataMigrations.py  misc_helpers.py
tests/: testAuth.py  testConfig.py  testConfigParse.py  validateJSON.py  validateSchema.py  validation_schema.json
