[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hardware-db"
version = "0.2.0"

dependencies = [
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=0.9.0",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "requests>=2.0.0",
    "httplib2>=0.20.0",
]

[project.optional-dependencies]
ci = [
    "jsonschema>=4.0.0",
]
notebook = [
    "ipykernel",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]